--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,13 @@ hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
+dupa.driver = org.postgresql.Driver
+dupa.url = jdbc:postgresql://dupahost:5432/dupa_prod
+dupa.username = micimichal
+dupa.password = cyce
+dupa.readonly = false
+dupa.autoCommit = false
+
 # Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto= update
 
