--- a/pom.xml
+++ b/pom.xml
@@ -118,10 +118,15 @@
       <artifactId>querydsl-jpa</artifactId>
       <version>4.0.6</version>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>javax.annotation</groupId>-->
+<!--      <artifactId>javax.annotation-api</artifactId>-->
+<!--      <version>1.3.2</version>-->
+<!--    </dependency>-->
     <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
