--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,14 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/playerstance
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.show-sql=true
-spring.datasource.ddl-auto=create
+#spring.datasource.show-sql=true
+#spring.datasource.ddl-auto=update
+spring.liquibase.change-log=changelog.xml
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 #hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #dupa.driver = org.postgresql.Driver
 #dupa.url = jdbc:postgresql://dupahost:5432/dupa_prod
